Implemented findAll() in MongoDoctorRepository
Finished the implementation of method findAll() in the concrete
implementation of DoctorRepository, MongoDoctorRepository